--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -830,7 +830,7 @@ section
 	width: 100%;
 	height: 700px;
 	background-repeat: no-repeat;
-	background-size: content;
+	background-size: contain;
 	background-position: center center;
 	margin-top: 150px;
 }
